// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`workflow non-ideal-states workflow interval query empty matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
        tabindex="-1"
      >
        <div
          class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
        >
          <div
            class="bp5-non-ideal-state-visual"
            style="font-size: 48px; line-height: 48px;"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-exclude-row"
              data-icon="exclude-row"
              tabindex="-1"
            />
          </div>
          <div
            class="bp5-non-ideal-state-text"
          >
            <h4
              class="bp5-heading"
            >
              No Data
            </h4>
            <div>
              Stage intervals returned empty
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
      tabindex="-1"
    >
      <div
        class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
      >
        <div
          class="bp5-non-ideal-state-visual"
          style="font-size: 48px; line-height: 48px;"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-exclude-row"
            data-icon="exclude-row"
            tabindex="-1"
          />
        </div>
        <div
          class="bp5-non-ideal-state-text"
        >
          <h4
            class="bp5-heading"
          >
            No Data
          </h4>
          <div>
            Stage intervals returned empty
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow interval query error matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
        tabindex="-1"
      >
        <div
          class="bp5-non-ideal-state bp5-non-ideal-state-vertical non-ideal-intent-icon"
        >
          <div
            class="bp5-non-ideal-state-visual"
            style="font-size: 48px; line-height: 48px;"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-issue bp5-intent-danger"
            >
              <svg
                data-icon="issue"
                height="48"
                role="img"
                viewBox="0 0 20 20"
                width="48"
              >
                <path
                  d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16zm1-2H9v-2h2v2zm0-3H9V4h2v9z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </div>
          <div
            class="bp5-non-ideal-state-text"
          >
            <h4
              class="bp5-heading"
            >
              Error
            </h4>
            <div>
              Problem loading workflow interval data
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
      tabindex="-1"
    >
      <div
        class="bp5-non-ideal-state bp5-non-ideal-state-vertical non-ideal-intent-icon"
      >
        <div
          class="bp5-non-ideal-state-visual"
          style="font-size: 48px; line-height: 48px;"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-issue bp5-intent-danger"
          >
            <svg
              data-icon="issue"
              height="48"
              role="img"
              viewBox="0 0 20 20"
              width="48"
            >
              <path
                d="M10 20C4.477 20 0 15.523 0 10S4.477 0 10 0s10 4.477 10 10-4.477 10-10 10zm0-2a8 8 0 100-16 8 8 0 000 16zm1-2H9v-2h2v2zm0-3H9V4h2v9z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </div>
        <div
          class="bp5-non-ideal-state-text"
        >
          <h4
            class="bp5-heading"
          >
            Error
          </h4>
          <div>
            Problem loading workflow interval data
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow interval query loading matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
        tabindex="-1"
      >
        <div
          class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
        >
          <div
            class="bp5-non-ideal-state-text"
          >
            <h4
              class="bp5-heading"
            >
              Loading
            </h4>
            <div>
              Workflow Interval Data
            </div>
          </div>
          <div
            aria-label="loading"
            aria-valuemax="100"
            aria-valuemin="0"
            class="bp5-spinner bp5-intent-primary"
            role="progressbar"
          >
            <div
              class="bp5-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp5-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp5-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
      tabindex="-1"
    >
      <div
        class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
      >
        <div
          class="bp5-non-ideal-state-text"
        >
          <h4
            class="bp5-heading"
          >
            Loading
          </h4>
          <div>
            Workflow Interval Data
          </div>
        </div>
        <div
          aria-label="loading"
          aria-valuemax="100"
          aria-valuemin="0"
          class="bp5-spinner bp5-intent-primary"
          role="progressbar"
        >
          <div
            class="bp5-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp5-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp5-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow interval query reloading matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
        tabindex="-1"
      >
        <div
          class="non-ideal-loading-wrapper"
        >
          <div
            role="tab"
            style="height: 100%;"
            tabindex="-1"
          >
            <div
              class="workflow-panel"
              data-cy="workflow-panel"
              tabindex="0"
            >
              <div
                class="toolbar"
                style="width: 1884px;"
              >
                <div
                  class="toolbar__left-group"
                >
                  <div
                    class="toolbar-item toolbar-item__left"
                  >
                    <div
                      class="toolbar-label-value"
                    >
                      <div
                        class="ian-label-value-container"
                      >
                        <div
                          class="ian-label-value__label"
                          data-cy="open-time-range-label"
                        >
                          Open Time Range: 
                        </div>
                        <div
                          class="ian-label-value__value"
                          data-cy="open-time-range-value"
                          title="The opened time range"
                        >
                          N/A
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="toolbar-item toolbar-item__left"
                  >
                    <div
                      class="toolbar-label-value"
                      style="margin-left: 8em;"
                    >
                      <div
                        class="ian-label-value-container"
                      >
                        <div
                          class="ian-label-value__label"
                          data-cy="processing-stage-label"
                        >
                          Processing Stage: 
                        </div>
                        <div
                          class="ian-label-value__value"
                          data-cy="processing-stage-value"
                          title="The opened processing stage"
                        >
                          N/A
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="toolbar__center-group"
                >
                  <div
                    class="toolbar__whitespace"
                    style="width: 1884px;"
                  />
                </div>
                <div
                  class="toolbar__right-group"
                >
                  <div
                    class="toolbar-item
                  "
                  >
                    <div>
                      <button
                        class="bp5-button toolbar-button--icon-only"
                        data-cy="workflow-doubleLeftArrowItem"
                        style="width: 30px;"
                        title="Pan the workflow to the left by 7 days (Shift + ←)"
                        type="button"
                      >
                        <span
                          class="bp5-button-text"
                        >
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-double-chevron-left"
                            data-icon="double-chevron-left"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="toolbar-item
                  "
                  >
                    <div>
                      <button
                        class="bp5-button toolbar-button--icon-only"
                        data-cy="workflow-singleLeftArrowItem"
                        style="width: 30px;"
                        title="Pan the workflow to the left by 1 day (←)"
                        type="button"
                      >
                        <span
                          class="bp5-button-text"
                        >
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-chevron-left"
                            data-icon="chevron-left"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="toolbar-item
                  "
                  >
                    <div>
                      <button
                        class="bp5-button toolbar-button--icon-only"
                        data-cy="workflow-singleRightArrowItem"
                        style="width: 30px;"
                        title="Pan the workflow to the right by 1 day (→)"
                        type="button"
                      >
                        <span
                          class="bp5-button-text"
                        >
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-chevron-right"
                            data-icon="chevron-right"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="toolbar-item
                  "
                  >
                    <div>
                      <button
                        class="bp5-button toolbar-button--icon-only"
                        data-cy="workflow-doubleRightArrowItem"
                        style="width: 30px;"
                        title="Pan the workflow to the right by 7 days (Shift + →)"
                        type="button"
                      >
                        <span
                          class="bp5-button-text"
                        >
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-double-chevron-right"
                            data-icon="double-chevron-right"
                          />
                        </span>
                      </button>
                    </div>
                  </div>
                  <div
                    class="toolbar-item
                  "
                  >
                    <div>
                      <button
                        class="bp5-button bp5-align-left toolbar-button"
                        data-cy="workflow-openAnythingButtonItem"
                        title="Open anything"
                        type="button"
                      >
                        <span
                          class="bp5-button-text"
                        >
                          <span />
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-search-template"
                            data-icon="search-template"
                          />
                          <span>
                            Open Anything...
                          </span>
                        </span>
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="non-ideal-loading-wrapper"
              >
                <div
                  class="workflow-table"
                  style="height: 1130px;"
                >
                  <div
                    class="workflow-table-container"
                  >
                    <div
                      class="workflow-table__curtain-left"
                      style="height: 48px;"
                    />
                    <div
                      class="workflow-table__buttons"
                    >
                      <div
                        class="workflow-button"
                        data-cy="workflow-expand-AL1"
                      >
                        <div
                          class="workflow-button__expand_collapse"
                        >
                          <button
                            class="bp5-button stage-row__expand-button"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp5-icon bp5-icon-standard bp5-icon-small-plus"
                              data-icon="small-plus"
                            />
                          </button>
                        </div>
                      </div>
                      <div
                        class="workflow-button"
                        data-cy="workflow-expand-Auto Network"
                      >
                        <div
                          class="workflow-button__expand_collapse"
                        >
                          <button
                            class="bp5-button stage-row__expand-button"
                            type="button"
                          >
                            <span
                              aria-hidden="true"
                              class="bp5-icon bp5-icon-standard bp5-icon-small-plus"
                              data-icon="small-plus"
                            />
                          </button>
                        </div>
                      </div>
                    </div>
                    <div
                      class="workflow-day-boundary-container"
                      style="width: 120px; height: 48px;"
                    />
                    <div
                      data-cy="workflow-table__container"
                      role="presentation"
                      style="height: 48px;"
                    >
                      <div
                        aria-label="grid"
                        class="ReactVirtualized__Collection"
                        role="grid"
                        style="box-sizing: border-box; direction: ltr; height: 48px; position: relative; width: 1693px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
                        tabindex="0"
                      >
                        <div
                          class="ReactVirtualized__Collection__innerScrollContainer"
                          style="height: 48px; max-height: 48px; max-width: 120px; overflow: hidden; width: 120px;"
                        >
                          <div
                            style="height: 24px; left: 0px; position: absolute; top: 0px; width: 4px;"
                          />
                          <div
                            style="height: 24px; left: 0px; position: absolute; top: 0px; width: 120px;"
                          >
                            <div
                              aria-expanded="false"
                              class="core-tooltip bp5-popover-target"
                            >
                              <div
                                class="interval-cell interval-cell--in-progress interval-cell--stale"
                                data-cy="INTERACTIVE"
                                data-interval="generic-interval"
                                data-sequence-interval="AL1"
                                data-start-time="1622053587"
                                data-testid="Open interval at 1622053587"
                                role="button"
                                tabindex="-1"
                              />
                            </div>
                          </div>
                          <div
                            style="height: 24px; left: 116px; position: absolute; top: 0px; width: 4px;"
                          />
                          <div
                            style="height: 24px; left: 0px; position: absolute; top: 24px; width: 4px;"
                          />
                          <div
                            style="height: 24px; left: 116px; position: absolute; top: 24px; width: 4px;"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="workflow-table__labels"
                      style="height: 48px;"
                    >
                      <div
                        class="workflow-table-label"
                        data-cy="workflow-table-label-AL1"
                      >
                        <div>
                          AL1
                        </div>
                      </div>
                      <div
                        class="workflow-table-label"
                        data-cy="workflow-table-label-Auto Network"
                      >
                        <div>
                          Auto Network
                        </div>
                      </div>
                    </div>
                    <div
                      class="workflow-table__curtain-right"
                      style="height: 48px;"
                    />
                  </div>
                  <div
                    class="workflow-table__time-axis"
                  >
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Collection"
                      role="grid"
                      style="box-sizing: border-box; direction: ltr; height: 16px; position: relative; width: 1693px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                      tabindex="0"
                    >
                      <div
                        class="ReactVirtualized__Collection__innerScrollContainer"
                        style="height: 48px; max-height: 48px; max-width: 120px; overflow: hidden; width: 120px;"
                      />
                    </div>
                    <div
                      class="time-axis-wrapper"
                      style="width: 1693px;"
                    >
                      <div
                        class="time-axis"
                      >
                        <svg
                          height="25"
                          style="fill: #fff;"
                          width="120"
                        >
                          <g
                            class="workflow-time-axis"
                            fill="none"
                            font-family="sans-serif"
                            font-size="10"
                            text-anchor="middle"
                          >
                            <path
                              class="domain"
                              d="M2,0.5H122"
                              stroke="currentColor"
                            />
                            <g
                              class="tick"
                              opacity="1"
                              transform="translate(69.1,0)"
                            >
                              <line
                                stroke="currentColor"
                                y2="6"
                              />
                              <text
                                dy="0.71em"
                                fill="currentColor"
                                y="9"
                              >
                                19:00
                              </text>
                            </g>
                          </g>
                        </svg>
                      </div>
                    </div>
                    <div
                      class="workflow-time-range"
                    >
                      <span
                        class="time-range-left"
                      >
                        2021-05-26
                      </span>
                      <span
                        class="time-range-right"
                      >
                        2021-05-26
                      </span>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
      tabindex="-1"
    >
      <div
        class="non-ideal-loading-wrapper"
      >
        <div
          role="tab"
          style="height: 100%;"
          tabindex="-1"
        >
          <div
            class="workflow-panel"
            data-cy="workflow-panel"
            tabindex="0"
          >
            <div
              class="toolbar"
              style="width: 1884px;"
            >
              <div
                class="toolbar__left-group"
              >
                <div
                  class="toolbar-item toolbar-item__left"
                >
                  <div
                    class="toolbar-label-value"
                  >
                    <div
                      class="ian-label-value-container"
                    >
                      <div
                        class="ian-label-value__label"
                        data-cy="open-time-range-label"
                      >
                        Open Time Range: 
                      </div>
                      <div
                        class="ian-label-value__value"
                        data-cy="open-time-range-value"
                        title="The opened time range"
                      >
                        N/A
                      </div>
                    </div>
                  </div>
                </div>
                <div
                  class="toolbar-item toolbar-item__left"
                >
                  <div
                    class="toolbar-label-value"
                    style="margin-left: 8em;"
                  >
                    <div
                      class="ian-label-value-container"
                    >
                      <div
                        class="ian-label-value__label"
                        data-cy="processing-stage-label"
                      >
                        Processing Stage: 
                      </div>
                      <div
                        class="ian-label-value__value"
                        data-cy="processing-stage-value"
                        title="The opened processing stage"
                      >
                        N/A
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="toolbar__center-group"
              >
                <div
                  class="toolbar__whitespace"
                  style="width: 1884px;"
                />
              </div>
              <div
                class="toolbar__right-group"
              >
                <div
                  class="toolbar-item
                  "
                >
                  <div>
                    <button
                      class="bp5-button toolbar-button--icon-only"
                      data-cy="workflow-doubleLeftArrowItem"
                      style="width: 30px;"
                      title="Pan the workflow to the left by 7 days (Shift + ←)"
                      type="button"
                    >
                      <span
                        class="bp5-button-text"
                      >
                        <span
                          aria-hidden="true"
                          class="bp5-icon bp5-icon-standard bp5-icon-double-chevron-left"
                          data-icon="double-chevron-left"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="toolbar-item
                  "
                >
                  <div>
                    <button
                      class="bp5-button toolbar-button--icon-only"
                      data-cy="workflow-singleLeftArrowItem"
                      style="width: 30px;"
                      title="Pan the workflow to the left by 1 day (←)"
                      type="button"
                    >
                      <span
                        class="bp5-button-text"
                      >
                        <span
                          aria-hidden="true"
                          class="bp5-icon bp5-icon-standard bp5-icon-chevron-left"
                          data-icon="chevron-left"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="toolbar-item
                  "
                >
                  <div>
                    <button
                      class="bp5-button toolbar-button--icon-only"
                      data-cy="workflow-singleRightArrowItem"
                      style="width: 30px;"
                      title="Pan the workflow to the right by 1 day (→)"
                      type="button"
                    >
                      <span
                        class="bp5-button-text"
                      >
                        <span
                          aria-hidden="true"
                          class="bp5-icon bp5-icon-standard bp5-icon-chevron-right"
                          data-icon="chevron-right"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="toolbar-item
                  "
                >
                  <div>
                    <button
                      class="bp5-button toolbar-button--icon-only"
                      data-cy="workflow-doubleRightArrowItem"
                      style="width: 30px;"
                      title="Pan the workflow to the right by 7 days (Shift + →)"
                      type="button"
                    >
                      <span
                        class="bp5-button-text"
                      >
                        <span
                          aria-hidden="true"
                          class="bp5-icon bp5-icon-standard bp5-icon-double-chevron-right"
                          data-icon="double-chevron-right"
                        />
                      </span>
                    </button>
                  </div>
                </div>
                <div
                  class="toolbar-item
                  "
                >
                  <div>
                    <button
                      class="bp5-button bp5-align-left toolbar-button"
                      data-cy="workflow-openAnythingButtonItem"
                      title="Open anything"
                      type="button"
                    >
                      <span
                        class="bp5-button-text"
                      >
                        <span />
                        <span
                          aria-hidden="true"
                          class="bp5-icon bp5-icon-standard bp5-icon-search-template"
                          data-icon="search-template"
                        />
                        <span>
                          Open Anything...
                        </span>
                      </span>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="non-ideal-loading-wrapper"
            >
              <div
                class="workflow-table"
                style="height: 1130px;"
              >
                <div
                  class="workflow-table-container"
                >
                  <div
                    class="workflow-table__curtain-left"
                    style="height: 48px;"
                  />
                  <div
                    class="workflow-table__buttons"
                  >
                    <div
                      class="workflow-button"
                      data-cy="workflow-expand-AL1"
                    >
                      <div
                        class="workflow-button__expand_collapse"
                      >
                        <button
                          class="bp5-button stage-row__expand-button"
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-small-plus"
                            data-icon="small-plus"
                          />
                        </button>
                      </div>
                    </div>
                    <div
                      class="workflow-button"
                      data-cy="workflow-expand-Auto Network"
                    >
                      <div
                        class="workflow-button__expand_collapse"
                      >
                        <button
                          class="bp5-button stage-row__expand-button"
                          type="button"
                        >
                          <span
                            aria-hidden="true"
                            class="bp5-icon bp5-icon-standard bp5-icon-small-plus"
                            data-icon="small-plus"
                          />
                        </button>
                      </div>
                    </div>
                  </div>
                  <div
                    class="workflow-day-boundary-container"
                    style="width: 120px; height: 48px;"
                  />
                  <div
                    data-cy="workflow-table__container"
                    role="presentation"
                    style="height: 48px;"
                  >
                    <div
                      aria-label="grid"
                      class="ReactVirtualized__Collection"
                      role="grid"
                      style="box-sizing: border-box; direction: ltr; height: 48px; position: relative; width: 1693px; will-change: transform; overflow-x: hidden; overflow-y: hidden;"
                      tabindex="0"
                    >
                      <div
                        class="ReactVirtualized__Collection__innerScrollContainer"
                        style="height: 48px; max-height: 48px; max-width: 120px; overflow: hidden; width: 120px;"
                      >
                        <div
                          style="height: 24px; left: 0px; position: absolute; top: 0px; width: 4px;"
                        />
                        <div
                          style="height: 24px; left: 0px; position: absolute; top: 0px; width: 120px;"
                        >
                          <div
                            aria-expanded="false"
                            class="core-tooltip bp5-popover-target"
                          >
                            <div
                              class="interval-cell interval-cell--in-progress interval-cell--stale"
                              data-cy="INTERACTIVE"
                              data-interval="generic-interval"
                              data-sequence-interval="AL1"
                              data-start-time="1622053587"
                              data-testid="Open interval at 1622053587"
                              role="button"
                              tabindex="-1"
                            />
                          </div>
                        </div>
                        <div
                          style="height: 24px; left: 116px; position: absolute; top: 0px; width: 4px;"
                        />
                        <div
                          style="height: 24px; left: 0px; position: absolute; top: 24px; width: 4px;"
                        />
                        <div
                          style="height: 24px; left: 116px; position: absolute; top: 24px; width: 4px;"
                        />
                      </div>
                    </div>
                  </div>
                  <div
                    class="workflow-table__labels"
                    style="height: 48px;"
                  >
                    <div
                      class="workflow-table-label"
                      data-cy="workflow-table-label-AL1"
                    >
                      <div>
                        AL1
                      </div>
                    </div>
                    <div
                      class="workflow-table-label"
                      data-cy="workflow-table-label-Auto Network"
                    >
                      <div>
                        Auto Network
                      </div>
                    </div>
                  </div>
                  <div
                    class="workflow-table__curtain-right"
                    style="height: 48px;"
                  />
                </div>
                <div
                  class="workflow-table__time-axis"
                >
                  <div
                    aria-label="grid"
                    class="ReactVirtualized__Collection"
                    role="grid"
                    style="box-sizing: border-box; direction: ltr; height: 16px; position: relative; width: 1693px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
                    tabindex="0"
                  >
                    <div
                      class="ReactVirtualized__Collection__innerScrollContainer"
                      style="height: 48px; max-height: 48px; max-width: 120px; overflow: hidden; width: 120px;"
                    />
                  </div>
                  <div
                    class="time-axis-wrapper"
                    style="width: 1693px;"
                  >
                    <div
                      class="time-axis"
                    >
                      <svg
                        height="25"
                        style="fill: #fff;"
                        width="120"
                      >
                        <g
                          class="workflow-time-axis"
                          fill="none"
                          font-family="sans-serif"
                          font-size="10"
                          text-anchor="middle"
                        >
                          <path
                            class="domain"
                            d="M2,0.5H122"
                            stroke="currentColor"
                          />
                          <g
                            class="tick"
                            opacity="1"
                            transform="translate(69.1,0)"
                          >
                            <line
                              stroke="currentColor"
                              y2="6"
                            />
                            <text
                              dy="0.71em"
                              fill="currentColor"
                              y="9"
                            >
                              19:00
                            </text>
                          </g>
                        </g>
                      </svg>
                    </div>
                  </div>
                  <div
                    class="workflow-time-range"
                  >
                    <span
                      class="time-range-left"
                    >
                      2021-05-26
                    </span>
                    <span
                      class="time-range-right"
                    >
                      2021-05-26
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow query error matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
        tabindex="-1"
      >
        <div
          class="bp5-non-ideal-state bp5-non-ideal-state-vertical non-ideal-intent-icon"
        >
          <div
            class="bp5-non-ideal-state-visual"
            style="font-size: 48px; line-height: 48px;"
          >
            <span
              aria-hidden="true"
              class="bp5-icon bp5-icon-issue bp5-intent-danger"
              data-icon="issue"
            />
          </div>
          <div
            class="bp5-non-ideal-state-text"
          >
            <h4
              class="bp5-heading"
            >
              Error
            </h4>
            <div>
              Problem loading workflow data
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
      tabindex="-1"
    >
      <div
        class="bp5-non-ideal-state bp5-non-ideal-state-vertical non-ideal-intent-icon"
      >
        <div
          class="bp5-non-ideal-state-visual"
          style="font-size: 48px; line-height: 48px;"
        >
          <span
            aria-hidden="true"
            class="bp5-icon bp5-icon-issue bp5-intent-danger"
            data-icon="issue"
          />
        </div>
        <div
          class="bp5-non-ideal-state-text"
        >
          <h4
            class="bp5-heading"
          >
            Error
          </h4>
          <div>
            Problem loading workflow data
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`workflow non-ideal-states workflow query loading matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="base-display "
        tabindex="-1"
      >
        <div
          class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
        >
          <div
            class="bp5-non-ideal-state-text"
          >
            <h4
              class="bp5-heading"
            >
              Loading
            </h4>
            <div>
              Workflow Data
            </div>
          </div>
          <div
            aria-label="loading"
            aria-valuemax="100"
            aria-valuemin="0"
            class="bp5-spinner bp5-intent-primary"
            role="progressbar"
          >
            <div
              class="bp5-spinner-animation"
            >
              <svg
                height="50"
                stroke-width="8.00"
                viewBox="1.00 1.00 98.00 98.00"
                width="50"
              >
                <path
                  class="bp5-spinner-track"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                />
                <path
                  class="bp5-spinner-head"
                  d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                  pathLength="280"
                  stroke-dasharray="280 280"
                  stroke-dashoffset="210"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="base-display "
      tabindex="-1"
    >
      <div
        class="bp5-non-ideal-state bp5-non-ideal-state-vertical"
      >
        <div
          class="bp5-non-ideal-state-text"
        >
          <h4
            class="bp5-heading"
          >
            Loading
          </h4>
          <div>
            Workflow Data
          </div>
        </div>
        <div
          aria-label="loading"
          aria-valuemax="100"
          aria-valuemin="0"
          class="bp5-spinner bp5-intent-primary"
          role="progressbar"
        >
          <div
            class="bp5-spinner-animation"
          >
            <svg
              height="50"
              stroke-width="8.00"
              viewBox="1.00 1.00 98.00 98.00"
              width="50"
            >
              <path
                class="bp5-spinner-track"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
              />
              <path
                class="bp5-spinner-head"
                d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
                pathLength="280"
                stroke-dasharray="280 280"
                stroke-dashoffset="210"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
